DW S12: rebalanced ai gold

--- a/data/campaigns/Dead_Water/scenarios/12_Revenge.cfg
+++ b/data/campaigns/Dead_Water/scenarios/12_Revenge.cfg
@@ -40,7 +40,7 @@
         canrecruit=yes
 
         {FLAG_VARIANT undead}
-        {GOLD4 360 450 550 660}
+        {GOLD4 330 420 540 660}
         {INCOME4 12 16 20 24}
     [/side]
 
@@ -56,7 +56,7 @@
         canrecruit=yes
 
         {FLAG_VARIANT undead}
-        {GOLD4 300 400 500 600}
+        {GOLD4 250 320 400 500}
         {INCOME4 10 12 15 19}
         [unit]
             type=Draug
@@ -95,7 +95,7 @@
         canrecruit=yes
 
         {FLAG_VARIANT undead}
-        {GOLD4 330 410 500 600}
+        {GOLD4 250 330 450 600}
         {INCOME4 12 16 20 24}
     [/side]
 
@@ -671,13 +671,13 @@
 #endif
 #ifdef NORMAL
         {GENERIC_UNIT 5 ("Vampire Bat") 29 1}
-        {GENERIC_UNIT 5 ("Vampire Bat") 26 1}
+        {GENERIC_UNIT 5 ("Blood Bat") 26 1}
         {GENERIC_UNIT 5 ("Blood Bat") 34 1}
         {GENERIC_UNIT 5 ("Blood Bat") 24 2}
         {GENERIC_UNIT 5 ("Vampire Bat") 25 2}
         {GENERIC_UNIT 5 ("Chocobone") 23 3}
         {GENERIC_UNIT 5 ("Chocobone") 27 2}
-        {GENERIC_UNIT 5 ("Ghost") 22 1}
+        {GENERIC_UNIT 5 ("Wraith") 22 1}
         {GENERIC_UNIT 5 ("Wraith") 33 1}
         {GENERIC_UNIT 5 ("Ghost") 37 1}
 #endif
@@ -685,32 +685,32 @@
         {GENERIC_UNIT 5 ("Blood Bat") 29 1}
         {GENERIC_UNIT 5 ("Blood Bat") 24 1}
         {GENERIC_UNIT 5 ("Blood Bat") 26 1}
-        {GENERIC_UNIT 5 ("Blood Bat") 34 1}
-        {GENERIC_UNIT 5 ("Blood Bat") 24 2}
+        {GENERIC_UNIT 5 ("Dread Bat") 34 1}
+        {GENERIC_UNIT 5 ("Dread Bat") 24 2}
         {GENERIC_UNIT 5 ("Blood Bat") 25 2}
         {GENERIC_UNIT 5 ("Chocobone") 23 3}
         {GENERIC_UNIT 5 ("Chocobone") 27 2}
         {GENERIC_UNIT 5 ("Chocobone") 29 2}
-        {GENERIC_UNIT 5 ("Shadow") 22 1}
-        {GENERIC_UNIT 5 ("Ghost") 33 1}
-        {GENERIC_UNIT 5 ("Wraith") 37 1}
+        {GENERIC_UNIT 5 ("Wraith") 22 1}
+        {GENERIC_UNIT 5 ("Wraith") 33 1}
+        {GENERIC_UNIT 5 ("Shadow") 37 1}
         {GENERIC_UNIT 5 ("Ghost") 38 1}
 #endif
 #ifdef NIGHTMARE
         {GENERIC_UNIT 5 ("Dread Bat") 29 1}
-        {GENERIC_UNIT 5 ("Blood Bat") 24 1}
+        {GENERIC_UNIT 5 ("Dread Bat") 24 1}
         {GENERIC_UNIT 5 ("Dread Bat") 26 1}
-        {GENERIC_UNIT 5 ("Blood Bat") 34 1}
+        {GENERIC_UNIT 5 ("Dread Bat") 34 1}
         {GENERIC_UNIT 5 ("Dread Bat") 24 2}
         {GENERIC_UNIT 5 ("Blood Bat") 25 2}
         {GENERIC_UNIT 5 ("Chocobone") 23 3}
         {GENERIC_UNIT 5 ("Chocobone") 27 2}
         {GENERIC_UNIT 5 ("Chocobone") 29 2}
         {GENERIC_UNIT 5 ("Chocobone") 37 1}
-        {GENERIC_UNIT 5 ("Shadow") 22 1}
-        {GENERIC_UNIT 5 ("Shadow") 33 1}
-        {GENERIC_UNIT 5 ("Wraith") 37 1}
-        {GENERIC_UNIT 5 ("Wraith") 38 1}
+        {GENERIC_UNIT 5 ("Wraith") 22 1}
+        {GENERIC_UNIT 5 ("Spectre") 33 1}
+        {GENERIC_UNIT 5 ("Nightgaunt") 37 1}
+        {GENERIC_UNIT 5 ("Shadow") 38 1}
 #endif
 
         [clear_variable]
