TRoW S22: cuttlefish animations use different facing filters

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/22_The_Rise_of_Wesnoth.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/22_The_Rise_of_Wesnoth.cfg
@@ -996,7 +996,12 @@
                     [/primary_attack]
 
                     [facing]
-                        x,y=23,23
+                        [filter_adjacent_location]
+                            adjacent=sw
+                            [filter]
+                                id=Squiddy
+                            [/filter]
+                        [/filter_adjacent_location]
                     [/facing]
 
                     hits=yes
@@ -1014,7 +1019,12 @@
                     [/primary_attack]
 
                     [facing]
-                        x,y=23,23
+                        [filter_adjacent_location]
+                            adjacent=sw
+                            [filter]
+                                id=Squiddy
+                            [/filter]
+                        [/filter_adjacent_location]
                     [/facing]
 
                     hits=yes
@@ -1124,10 +1134,6 @@
                         range=melee
                     [/primary_attack]
 
-                    [facing]
-                        x,y=43,17
-                    [/facing]
-
                     hits=yes
                 [/animate_unit]
 
@@ -1141,10 +1147,6 @@
                     [primary_attack]
                         range=melee
                     [/primary_attack]
-
-                    [facing]
-                        x,y=43,17
-                    [/facing]
 
                     hits=yes
                 [/animate_unit]
@@ -1244,10 +1246,6 @@
                         range=melee
                     [/primary_attack]
 
-                    [facing]
-                        x,y=41,31
-                    [/facing]
-
                     hits=yes
                 [/animate_unit]
 
@@ -1261,10 +1259,6 @@
                     [primary_attack]
                         range=melee
                     [/primary_attack]
-
-                    [facing]
-                        x,y=41,31
-                    [/facing]
 
                     hits=yes
                 [/animate_unit]
