TSG S1: typo fixes

--- a/data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg
@@ -203,7 +203,7 @@
         [message]
             speaker=Deoran
             image=portraits/deoran-mad.png
-            message= _ "My kind? I am a knight of Wesnoth and a messenger appointed by the King himself! What do you mean, <i>"my kind"</i>? And where is the South Guard?"
+            message= _ "My kind? I am a knight of Wesnoth and a messenger appointed by the King himself! What do you mean, <i>“my kind”</i>? And where is the South Guard?"
         [/message]
 
         [message]
@@ -273,7 +273,7 @@
 
         [message]
             speaker=Deoran
-            message= _ "Do not despair! I am sure we can drive off these brigands if we rally the villagers and re-man the posts. Are there any weapons left in the citadel's armory?"
+            message= _ "Do not despair! I am sure we can drive off these brigands if we rally the villagers and re-man the posts. Are there any weapons left in the citadel’s armory?"
         [/message]
 
         [message]
@@ -385,12 +385,12 @@
         [message]
             speaker=narrator
             image="units/human-loyalists/bowman.png~RC(magenta>red)"
-            message= _ "Bowmen have a strong ranged attack, and are very effective against units that lack a ranged attack, like Thieves and Thugs. They also carry a sword and can defend themselves against melee attacks."
+            message= _ "Bowmen have a strong ranged attack and are very effective against units that lack a ranged attack, like Thieves and Thugs. They also carry a sword and can defend themselves against melee attacks."
         [/message]
         [message]
             speaker=narrator
             image="units/human-loyalists/spearman.png~RC(magenta>red)"
-            message= _ "Spearmen have a strong melee attack, and are effective against most units. They also have a weak ranged attack. They form the backbone of the South Guard."
+            message= _ "Spearmen have a strong melee attack and are effective against most units. They also have a weak ranged attack. They form the backbone of the South Guard."
         [/message]
         [message]
             speaker=narrator
@@ -525,7 +525,7 @@
         [message]
             speaker=narrator
             image=misc/time-schedules/default/schedule-dawn.png
-            message= _ "During the day, your units will deal more damage and the bandits will deal less. The more of Urza Mathin's troops you can defeat during the day, the better."
+            message= _ "During the day, your units will deal more damage and the bandits will deal less. The more of Urza Mathin’s troops you can defeat during the day, the better."
         [/message]
 #endif
     [/event]
