TSG S2: typo fix

--- a/data/campaigns/The_South_Guard/scenarios/02_Proven_by_the_Sword.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/02_Proven_by_the_Sword.cfg
@@ -849,7 +849,7 @@
 
         [message]
             speaker=Deoran
-            message= _ "Very well. Although it will probably take too long to send word to the King for reinforcements, I remember there being a small outpost within a couple day's ride of here. I will send a message to them asking for a few riders, then we should make haste toward the Aethenwood to find the elves."
+            message= _ "Very well. Although it will probably take too long to send word to the King for reinforcements, I remember there being a small outpost within a couple days’ ride of here. I will send a message to them asking for a few riders, then we should make haste toward the Aethenwood to find the elves."
         [/message]
 
         {CLEAR_VARIABLE citadel_secured}
