TSG S3: typo fixes

--- a/data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg
@@ -222,7 +222,7 @@
 
         [message]
             speaker=Sir Gerrick
-            message= _ "Nevertheless, we musn't charge in blindly. Even if the elves are unlikely to attack us, we do not know what else lies in these forests."
+            message= _ "Nevertheless, we musn’t charge in blindly. Even if the elves are unlikely to attack us, we do not know what else lies in these forests."
         [/message]
 
         [message]
@@ -352,7 +352,7 @@
 
         [message]
             speaker=Deoran
-            message= _ "Their leader is defeated! I hope that's the last bandit we ever have to fight."
+            message= _ "Their leader is defeated! I hope that’s the last bandit we ever have to fight."
         [/message]
 
         [message]
@@ -508,7 +508,7 @@
 
         [message]
             speaker=Ethiliel
-            message= _ "<i>I</i> will accompany the human and his men to Mebrin, and he can decide whether or not he wants to help us. I will not ask you to place yourselves in danger for these humans, but you will not presume to tell me—nor Mebrin—what to do. Is that fair?"
+            message= _ "<i>I</i> will accompany the human and his men to Mebrin, and he can decide whether or not he wants to help us. I will not ask you to place yourselves in danger for these humans, but you will not presume to tell me — nor Mebrin — what to do. Is that fair?"
         [/message]
 
         [message]
