NR S7a: wmllint run
[ci skip]

--- a/data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg
@@ -328,7 +328,7 @@
                 condition=win
                 [show_if]
                     [have_unit]
-                        id=Ro'Sothian
+                        id="Ro'Sothian"
                     [/have_unit]
                 [/show_if]
             [/objective]
@@ -625,7 +625,7 @@
 
         [store_unit]
             [filter]
-                id=Ro'Sothian
+                id="Ro'Sothian"
             [/filter]
             kill=yes
             variable=rosothian
@@ -664,7 +664,7 @@
             [/unstore_unit]
             [heal_unit]
                 [filter]
-                    id=Ro'Sothian
+                    id="Ro'Sothian"
                 [/filter]
                 amount=full
                 moves=full
@@ -716,7 +716,7 @@
 
                 [store_unit]
                     [filter]
-                        id=Ro'Sothian
+                        id="Ro'Sothian"
                     [/filter]
                     kill=no
                     variable=rosothian
@@ -729,7 +729,7 @@
     [event]
         name=die
         [filter]
-            id=Ro'Sothian
+            id="Ro'Sothian"
         [/filter]
 
         {VARIABLE defeat_arthian yes}
@@ -817,7 +817,7 @@
         [if]
             [not]
                 [have_unit]
-                    id=Ro'Sothian
+                    id="Ro'Sothian"
                 [/have_unit]
             [/not]
             [then]
@@ -832,7 +832,7 @@
                 [/unstore_unit]
                 [heal_unit]
                     [filter]
-                        id=Ro'Sothian
+                        id="Ro'Sothian"
                     [/filter]
                     amount=full
                     moves=full
@@ -941,7 +941,7 @@
         [if]
             [not]
                 [have_unit]
-                    id=Ro'Sothian
+                    id="Ro'Sothian"
                 [/have_unit]
             [/not]
             [then]
