NR S7a: wmllint run
[ci skip]

--- a/data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg
+++ b/data/campaigns/Northern_Rebirth/scenarios/07a_Settling_Disputes.cfg
@@ -326,7 +326,7 @@
                 condition=win
                 [show_if]
                     [have_unit]
-                        id=Ro'Sothian
+                        id="Ro'Sothian"
                     [/have_unit]
                 [/show_if]
             [/objective]
@@ -621,7 +621,7 @@
 
         [store_unit]
             [filter]
-                id=Ro'Sothian
+                id="Ro'Sothian"
             [/filter]
             kill=yes
             variable=rosothian
@@ -660,7 +660,7 @@
             [/unstore_unit]
             [heal_unit]
                 [filter]
-                    id=Ro'Sothian
+                    id="Ro'Sothian"
                 [/filter]
                 amount=full
                 moves=full
@@ -712,7 +712,7 @@
 
                 [store_unit]
                     [filter]
-                        id=Ro'Sothian
+                        id="Ro'Sothian"
                     [/filter]
                     kill=no
                     variable=rosothian
@@ -725,7 +725,7 @@
     [event]
         name=die
         [filter]
-            id=Ro'Sothian
+            id="Ro'Sothian"
         [/filter]
 
         {VARIABLE defeat_arthian yes}
@@ -813,7 +813,7 @@
         [if]
             [not]
                 [have_unit]
-                    id=Ro'Sothian
+                    id="Ro'Sothian"
                 [/have_unit]
             [/not]
             [then]
@@ -828,7 +828,7 @@
                 [/unstore_unit]
                 [heal_unit]
                     [filter]
-                        id=Ro'Sothian
+                        id="Ro'Sothian"
                     [/filter]
                     amount=full
                     moves=full
@@ -937,7 +937,7 @@
         [if]
             [not]
                 [have_unit]
-                    id=Ro'Sothian
+                    id="Ro'Sothian"
                 [/have_unit]
             [/not]
             [then]
