TSG S4: small dialogue fixes

--- a/data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/04_Vale_of_Tears.cfg
@@ -533,7 +533,7 @@
 
         [message]
             speaker="Mal A'kai"
-            message= _ "Ah... the darkness beckons..."
+            message= _ "The darkness beckons..."
         [/message]
 
         [kill]
@@ -733,7 +733,7 @@
         [/message]
         [message]
             speaker=Deoran
-            message= _ "They have reached Mebrin's village before us! We have no hope of obtaining his aid now..."
+            message= _ "They have reached Mebrin’s village before us! We have no hope of obtaining his aid now..."
         [/message]
     [/event]
 
