TSG S5: small dialogue fixes

--- a/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg
@@ -237,7 +237,7 @@
 
         [message]
             speaker=Deoran
-            message= _ "It's so cold here! And this fog is so thick. This cannot be natural for a forest like this."
+            message= _ "It’s so cold here! And this fog is so thick. This cannot be natural for a forest like this."
         [/message]
 
         [message]
@@ -849,7 +849,7 @@
 
                             [message]
                                 speaker=Urza Afalas
-                                message= _ "Do not fear, I know the way out, and can lead you back to your homes after we defeat the undead."
+                                message= _ "Do not fear! I know the way out and can lead you back to your homes after we defeat the undead."
                             [/message]
 
                             {VARIABLE side_with_bandits yes}
@@ -1067,7 +1067,7 @@
                 [message]
                     speaker=Deoran
                     image=portraits/deoran-glad.png
-                    message= _ "Indeed. The lich has fallen. Looks like the corrupted sage was still no match for us!"
+                    message= _ "Indeed. The lich has fallen. Looks like the corrupted sage was no match for us!"
                 [/message]
                 [message]
                     speaker=Urza Afalas
@@ -1110,7 +1110,7 @@
                 [message]
                     speaker=Deoran
                     image=portraits/deoran-mad.png
-                    message= _ "That's <i>Sir</i> Deoran to the likes of you!"
+                    message= _ "That’s <i>Sir</i> Deoran to the likes of you!"
                 [/message]
                 [message]
                     speaker=Urza Afalas
