TSG S6b: dialogue fixes

--- a/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
@@ -514,7 +514,7 @@ _f, _f, Re, _f
         [/message]
         [message]
             speaker=Sir Gerrick
-            message= _ "What's done is done. We must worry about the task at hand. Winter is almost upon us and it will be much more difficult to forage for food then."
+            message= _ "What’s done is done. We must worry about the task at hand. Winter is almost upon us and it will be much more difficult to forage for food then."
         [/message]
         [message]
             speaker=Minister Hylas
@@ -522,14 +522,14 @@ _f, _f, Re, _f
         [/message]
         [message]
             speaker=Urza Afalas
-            message= _ "It must be because we destroyed that phantom lich. The corrupted sage is sending them to hunt us in retaliation. Let's get out of here quickly so we won't have to fight them."
+            message= _ "It must be because we destroyed that phantom lich. The corrupted sage is sending them to hunt us in retaliation. Let’s get out of here quickly so we won’t have to fight them."
         [/message]
 
         {MOVE_UNIT (id=Urza Afalas) 18 35}
 
         [message]
             speaker=Urza Afalas
-            message= _ "Ah, also, remember that these woods are crawling with elves. Stay on the path and perhaps we can avoid at least most of them. If we do get seen, well, let's hope they won't attack us."
+            message= _ "Also, remember that these woods are crawling with elves. Stay on the path and perhaps we can avoid at least most of them. If we do get seen, well, let’s hope they won’t attack us."
         [/message]
 
         [objectives]
@@ -954,7 +954,7 @@ _f, _f, Re, _f
             [/message]
             [message]
                 speaker=Sir Gerrick
-                message= _ "We don't want to fight you! We wish only to return to our homes!"
+                message= _ "We don’t want to fight you! We wish only to return to our homes!"
             [/message]
             [message]
                 race=elf
