--- a/data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg
@@ -382,7 +382,7 @@
 
         [message]
             speaker=Deoran
-            message= _ "Very well. We should all stay close and guard each others' backs. Something sinister lurks in this darkness."
+            message= _ "Very well. We should all stay close and guard each others’ backs. Something sinister lurks in this darkness."
         [/message]
 
 #ifdef EASY
@@ -761,11 +761,11 @@
 
         [message]
             speaker=Minister Hylas
-            message= _ "I feel the touch of dark magic. This is quite a powerful spell—the very air feels thick and heavy."
+            message= _ "I feel the touch of dark magic. This is quite a powerful spell — the very air feels thick and heavy."
         [/message]
         [message]
             speaker=Ethiliel
-            message= _ "It is Mebrin's doing. I recognize the energy, though it has been twisted by the touch of the black arts. He used to use this spell to heal the mind and purge negative emotions from the body. I imagine it will have exactly the opposite effect now."
+            message= _ "It is Mebrin’s doing. I recognize the energy, though it has been twisted by the touch of the black arts. He used to use this spell to heal the mind and purge negative emotions from the body. I imagine it will have exactly the opposite effect now."
         [/message]
     [/event]
     [event]
@@ -781,7 +781,7 @@
         [/message]
         [message]
             speaker=Ethiliel
-            message= _ "We must hurry! Once Mebrin's spell takes full effect, none of us will be able to stop him."
+            message= _ "We must hurry! Once Mebrin’s spell takes full effect, none of us will be able to stop him."
         [/message]
     [/event]
     [event]
@@ -845,7 +845,7 @@
 
         [message]
             speaker="Mal M'Brin"
-            message= _ "You wouldn't dare strike me! I am the darkness incarnate! I am your master! You will obey me!"
+            message= _ "You wouldn’t dare strike me! I am the darkness incarnate! I am your master! You will obey me!"
         [/message]
 
         [message]
@@ -870,7 +870,7 @@
 
         [message]
             speaker="Ethiliel"
-            message= _ "Yes, just let me gather my thoughts, and I will lead you back to your homes."
+            message= _ "Yes... just let me gather my thoughts, and I will lead you back to your homes."
         [/message]
 
         [kill]
