TSG S8a: typo fix

--- a/data/campaigns/The_South_Guard/scenarios/08a_Return_to_Kerlath.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/08a_Return_to_Kerlath.cfg
@@ -206,7 +206,7 @@
 
         [message]
             id=Deoran
-            message= _"We are finally back in familiar territory. Westin is no more than a couple days' journey from here. Let us make haste back to our homes."
+            message= _"We are finally back in familiar territory. Westin is no more than a couple days’ journey from here. Let us make haste back to our homes."
         [/message]
 
         {HIGHLIGHT_IMAGE 3 7 items/gohere.png ()}
