--- a/data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/08b_The_Tides_of_War.cfg
@@ -415,7 +415,7 @@
             [then]
                 [message]
                     speaker=Deoran
-                    message= _ "He was a noble man to have sacrificed himself for us. I wish that it did not have to be so, but in the narrow window Gerrick's valiant stand gave us, we have gathered some of the provincial guard and reinforced our defenses!"
+                    message= _ "He was a noble man to have sacrificed himself for us. I wish that it did not have to be so, but in the narrow window Gerrick’s valiant stand gave us, we have gathered some of the provincial guard and reinforced our defenses!"
                 [/message]
             [/then]
             [elseif]
@@ -430,7 +430,7 @@
                 [then]
                     [message]
                         speaker=Deoran
-                        message= _ "He was a noble man to have sacrificed himself for us. I wish that it did not have to be so, but in the narrow window Gerrick's valiant stand gave us, we have gathered the whole provincial guard and reinforced our defenses!"
+                        message= _ "He was a noble man to have sacrificed himself for us. I wish that it did not have to be so, but in the narrow window Gerrick’s valiant stand gave us, we have gathered the whole provincial guard and reinforced our defenses!"
                     [/message]
                 [/then]
             [/elseif]
@@ -446,7 +446,7 @@
                 [then]
                     [message]
                         speaker=Deoran
-                        message= _ "He was a noble man to have sacrificed himself for us. I wish that it did not have to be so, but in the narrow window Gerrick's valiant stand gave us, we have gathered the whole provincial guard and fully embattled the city!"
+                        message= _ "He was a noble man to have sacrificed himself for us. I wish that it did not have to be so, but in the narrow window Gerrick’s valiant stand gave us, we have gathered the whole provincial guard and fully embattled the city!"
                     [/message]
                 [/then]
             [/elseif]
@@ -549,7 +549,7 @@
         [/message]
         [message]
             speaker="Mal M'Brin"
-            message= _ "Slay them all! Even if we sustain heavy losses here, the city's inhabitants will be more than enough to replenish our ranks."
+            message= _ "Slay them all! Even if we sustain heavy losses here, the city’s inhabitants will be more than enough to replenish our ranks."
         [/message]
     [/event]
 
@@ -607,7 +607,7 @@
 
         [message]
             speaker="Mal M'Brin"
-            message= _ "The shroud of darkness descends once more. Night seeps through the cracks and crannies in the humans' defenses, plaguing their minds and bodies with dreadful fear. As surely as the sanctity of the psyche is shattered, so is the physical form, and all that is left is unthinking, unfeeling servitude."
+            message= _ "The shroud of darkness descends once more. Night seeps through the cracks and crannies in the humans’ defenses, plaguing their minds and bodies with dreadful fear. As surely as the sanctity of the psyche is shattered, so is the physical form, and all that is left is unthinking, unfeeling servitude."
         [/message]
         [message]
             speaker=Deoran
