--- a/data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/09a_Vengeance.cfg
@@ -191,7 +191,7 @@
         [/move_unit]
         [message]
             speaker=Eltenmir
-            message= _ "You will pay for Mebrin's death!"
+            message= _ "You will pay for Mebrin’s death!"
         [/message]
         [message]
             speaker=Poor Farmer
@@ -268,7 +268,7 @@
         [/message]
         [message]
             speaker=Deoran
-            message= _ "Are you sure that they'll listen to Ithelden? Or that he'll even try to stop them?"
+            message= _ "Are you sure that they’ll listen to Ithelden? Or that he’ll even try to stop them?"
         [/message]
         [message]
             speaker=Ethiliel
@@ -461,7 +461,7 @@
         [/message]
         [message]
             speaker=Ithelden
-            message= _ "I know you must be grieving over Mebrin's death as well, but surely you see that nothing good can come of doing this. Especially not from attacking Ethiliel!"
+            message= _ "I know you must be grieving over Mebrin’s death as well, but surely you see that nothing good can come of doing this. Especially not from attacking Ethiliel!"
         [/message]
         [message]
             speaker=Eltenmir
