--- a/data/campaigns/The_South_Guard/utils/sg_story.cfg
+++ b/data/campaigns/The_South_Guard/utils/sg_story.cfg
@@ -13,11 +13,11 @@
         [/part]
         [part]
             background=story/summer.jpg
-            story= _ "Over time, in the absence of pressing danger, the South Guard grew complacent and lazy. Reports to King Haldric slowed, and in the spring of the ninth year, ceased altogether. Displeased with Sir Loris' conduct, the king decided to send someone to investigate."
+            story= _ "Over time, in the absence of pressing danger, the South Guard grew complacent and lazy. Reports to King Haldric slowed, and in the spring of the ninth year, ceased altogether. Displeased with Sir Loris’ conduct, the king decided to send someone to investigate."
         [/part]
         [part]
             background=story/summer.jpg
-            story= _ "Haldric summoned a young, but promising cavalry officer named Deoran for the task. Though undistinguished, Deoran's family had a decorated history in the army of Wesnoth: his grandfather, Haldiel, had fought alongside Konrad I in the war to reclaim the throne, and his father, Leonard, had served as an officer for thirty years. Thus, with full trust in the young officer, King Haldric knighted Deoran and tasked him with riding to Westin to demand accounting from Sir Loris."
+            story= _ "Haldric summoned a young, but promising cavalry officer named Deoran for the task. Though undistinguished, Deoran’s family had a decorated history in the army of Wesnoth: his grandfather, Haldiel, had fought alongside Konrad I in the war to reclaim the throne, and his father, Leonard, had served as an officer for thirty years. Thus, with full trust in the young officer, King Haldric knighted Deoran and tasked him with riding to Westin to demand accounting from Sir Loris."
             show_title=yes
         [/part]
     [/story]
@@ -42,7 +42,7 @@
     [story]
         [part]
             background=story/fall.jpg
-            story= _ "Ethiliel led the men of the South Guard into the southern forest. The deep woods were overcast with unnatural shadow as they entered, shrouded with eerie silence and uncanny stillness. Grey darkness sapped all color from their surroundings, rendering all murky and gloomy, with every movement and every sound muted in the thick fog. Deoran's small company kept vigilant watch on the dense forest and on each other, wary of the foreboding ambience, and even the elves seemed rather disconcerted."
+            story= _ "Ethiliel led the men of the South Guard into the southern forest. The deep woods were overcast with unnatural shadow as they entered, shrouded with eerie silence and uncanny stillness. Grey darkness sapped all color from their surroundings, rendering all murky and gloomy, with every movement and every sound muted in the thick fog. Deoran’s small company kept vigilant watch on the dense forest and on each other, wary of the foreboding ambience, and even the elves seemed rather disconcerted."
             music=revelation.ogg
         [/part]
 
@@ -68,7 +68,7 @@
 
         [part]
             background=story/fall.jpg
-            story= _ "He wondered briefly why she had stopped mentioning Mebrin and his whereabouts, but something told him that now was not the time to mention the sage's name. Perhaps, he thought, she suspected that the bandits' story was indeed true and that Mebrin had been corrupted by his dabblings in undead magic. Perhaps she simply hadn't come to terms with it."
+            story= _ "He wondered briefly why she had stopped mentioning Mebrin and his whereabouts, but something told him that now was not the time to mention the sage’s name. Perhaps, he thought, she suspected that the bandits’ story was indeed true and that Mebrin had been corrupted by his dabbling in undead magic. Perhaps she simply hadn't come to terms with it."
         [/part]
 
         [part]
@@ -133,7 +133,7 @@
         [/part]
         [part]
             background=story/winter.jpg
-            story= _ "Finally, as the snow melted and green buds marked the onset of spring, Deoran knew the time had come to report back to King Haldric. He bade the people of Westin farewell and made his journey northward to Weldyn. While years of rebuilding lay ahead for Kerlath, they would take place in peace thanks to Deoran's leadership and the heroics of the South Guard."
+            story= _ "Finally, as the snow melted and green buds marked the onset of spring, Deoran knew the time had come to report back to King Haldric. He bade the people of Westin farewell and made his journey northward to Weldyn. While years of rebuilding lay ahead for Kerlath, they would take place in peace thanks to Deoran’s leadership and the heroics of the South Guard."
             music=traveling_minstrels.ogg
         [/part]
     [/story]
@@ -143,7 +143,7 @@
     [story]
         [part]
             background=story/winter.jpg
-            story= _ "As the lich's final death scream echoed across the battlefield, his skeletal form began to crumble. Decayed bones disintegrated into ash, borne away on the frigid wind, another immortal soul cast back into the endless flow of time. With their master's power gone, the undead warriors fell back to lifelessness, crumbling into inanimate heaps of bones. The rustling wind floated across the battlefield in gentle streams, carrying with it the souls of the fallen and ascending toward the sky where the sun began to break through the ashen clouds. As the sunlight broke through, the wind passed, and all was still."
+            story= _ "As the lich’s final death scream echoed across the battlefield, his skeletal form began to crumble. Decayed bones disintegrated into ash, borne away on the frigid wind, another immortal soul cast back into the endless flow of time. With their master's power gone, the undead warriors fell back to lifelessness, crumbling into inanimate heaps of bones. The rustling wind floated across the battlefield in gentle streams, carrying with it the souls of the fallen and ascending toward the sky where the sun began to break through the ashen clouds. As the sunlight broke through, the wind passed, and all was still."
             music=revelation.ogg
         [/part]
 
@@ -174,7 +174,7 @@
 
         [part]
             background=story/winter.jpg
-            story= _ "Finally, as the snow melted and green buds marked the onset of spring, Deoran knew the time had come to report back to King Haldric. He bade the people of Westin farewell and made his journey northward to Weldyn. While years of rebuilding lay ahead for Kerlath, they would take place in peace thanks to Deoran's leadership and the heroics of the South Guard."
+            story= _ "Finally, as the snow melted and green buds marked the onset of spring, Deoran knew the time had come to report back to King Haldric. He bade the people of Westin farewell and made his journey northward to Weldyn. While years of rebuilding lay ahead for Kerlath, they would take place in peace thanks to Deoran’s leadership and the heroics of the South Guard."
             music=traveling_minstrels.ogg
         [/part]
     [/story]
