--- a/data/gui/window/campaign_dialog.cfg
+++ b/data/gui/window/campaign_dialog.cfg
@@ -202,7 +202,7 @@
 											grow_factor = 1
 											border = "all"
 											border_size = 5
-											horizontal_alignment = "left"
+											horizontal_grow = true
 
 											[text_box]
 												id = "filter_box"
