Rename Xcode project and target to pass Apple's guidelines

--- a/projectfiles/Xcode/The Battle for Wesnoth.xcodeproj/xcshareddata/xcschemes/The Battle for Wesnoth.xcscheme
+++ b/projectfiles/Xcode/The Battle for Wesnoth.xcodeproj/xcshareddata/xcschemes/The Battle for Wesnoth.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "B597C4970FACD3CD00CE81F5"
-               BuildableName = "unit_tests"
-               BlueprintName = "unit_tests"
-               ReferencedContainer = "container:Wesnoth.xcodeproj">
+               BlueprintIdentifier = "8D1107260486CEB800E47090"
+               BuildableName = "The Battle for Wesnoth.app"
+               BlueprintName = "The Battle for Wesnoth"
+               ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,10 +32,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "B597C4970FACD3CD00CE81F5"
-            BuildableName = "unit_tests"
-            BlueprintName = "unit_tests"
-            ReferencedContainer = "container:Wesnoth.xcodeproj">
+            BlueprintIdentifier = "8D1107260486CEB800E47090"
+            BuildableName = "The Battle for Wesnoth.app"
+            BlueprintName = "The Battle for Wesnoth"
+            ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -46,39 +46,21 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
-      useCustomWorkingDirectory = "YES"
-      customWorkingDirectory = "$BUILT_PRODUCTS_DIR/Wesnoth.app/Contents/Resources"
+      useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
-      debugDocumentVersioning = "NO"
+      debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "B597C4970FACD3CD00CE81F5"
-            BuildableName = "unit_tests"
-            BlueprintName = "unit_tests"
-            ReferencedContainer = "container:Wesnoth.xcodeproj">
+            BlueprintIdentifier = "8D1107260486CEB800E47090"
+            BuildableName = "The Battle for Wesnoth.app"
+            BlueprintName = "The Battle for Wesnoth"
+            ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <EnvironmentVariables>
-         <EnvironmentVariable
-            key = "DYLD_FALLBACK_FRAMEWORK_PATH"
-            value = "../../../TestFrameworks:../Frameworks"
-            isEnabled = "YES">
-         </EnvironmentVariable>
-         <EnvironmentVariable
-            key = "DYLD_FALLBACK_LIBRARY_PATH"
-            value = "../../../TestFrameworks:../Frameworks"
-            isEnabled = "YES">
-         </EnvironmentVariable>
-         <EnvironmentVariable
-            key = "DYLD_IMAGE_SUFFIX"
-            value = "-mt"
-            isEnabled = "YES">
-         </EnvironmentVariable>
-      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -92,10 +74,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "B597C4970FACD3CD00CE81F5"
-            BuildableName = "unit_tests"
-            BlueprintName = "unit_tests"
-            ReferencedContainer = "container:Wesnoth.xcodeproj">
+            BlueprintIdentifier = "8D1107260486CEB800E47090"
+            BuildableName = "The Battle for Wesnoth.app"
+            BlueprintName = "The Battle for Wesnoth"
+            ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
