--- a/projectfiles/Xcode/The Battle for Wesnoth.xcodeproj/xcshareddata/xcschemes/campaignd.xcscheme
+++ b/projectfiles/Xcode/The Battle for Wesnoth.xcodeproj/xcshareddata/xcschemes/campaignd.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "91C548A01D8866ED00FE6A7B"
                BuildableName = "campaignd"
                BlueprintName = "campaignd"
-               ReferencedContainer = "container:Wesnoth.xcodeproj">
+               ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -35,7 +35,7 @@
             BlueprintIdentifier = "91C548A01D8866ED00FE6A7B"
             BuildableName = "campaignd"
             BlueprintName = "campaignd"
-            ReferencedContainer = "container:Wesnoth.xcodeproj">
+            ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -58,7 +58,7 @@
             BlueprintIdentifier = "91C548A01D8866ED00FE6A7B"
             BuildableName = "campaignd"
             BlueprintName = "campaignd"
-            ReferencedContainer = "container:Wesnoth.xcodeproj">
+            ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -77,7 +77,7 @@
             BlueprintIdentifier = "91C548A01D8866ED00FE6A7B"
             BuildableName = "campaignd"
             BlueprintName = "campaignd"
-            ReferencedContainer = "container:Wesnoth.xcodeproj">
+            ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
