--- a/projectfiles/Xcode/The Battle for Wesnoth.xcodeproj/xcshareddata/xcschemes/liblua.xcscheme
+++ b/projectfiles/Xcode/The Battle for Wesnoth.xcodeproj/xcshareddata/xcschemes/liblua.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8D1107260486CEB800E47090"
-               BuildableName = "Wesnoth.app"
-               BlueprintName = "Wesnoth"
-               ReferencedContainer = "container:Wesnoth.xcodeproj">
+               BlueprintIdentifier = "9107AE131DB32862001927B0"
+               BuildableName = "liblua.a"
+               BlueprintName = "liblua"
+               ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -29,15 +29,6 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8D1107260486CEB800E47090"
-            BuildableName = "Wesnoth.app"
-            BlueprintName = "Wesnoth"
-            ReferencedContainer = "container:Wesnoth.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -51,16 +42,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8D1107260486CEB800E47090"
-            BuildableName = "Wesnoth.app"
-            BlueprintName = "Wesnoth"
-            ReferencedContainer = "container:Wesnoth.xcodeproj">
+            BlueprintIdentifier = "9107AE131DB32862001927B0"
+            BuildableName = "liblua.a"
+            BlueprintName = "liblua"
+            ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -70,16 +60,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8D1107260486CEB800E47090"
-            BuildableName = "Wesnoth.app"
-            BlueprintName = "Wesnoth"
-            ReferencedContainer = "container:Wesnoth.xcodeproj">
+            BlueprintIdentifier = "9107AE131DB32862001927B0"
+            BuildableName = "liblua.a"
+            BlueprintName = "liblua"
+            ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
