--- a/projectfiles/Xcode/The Battle for Wesnoth.xcodeproj/xcshareddata/xcschemes/unit_tests.xcscheme
+++ b/projectfiles/Xcode/The Battle for Wesnoth.xcodeproj/xcshareddata/xcschemes/unit_tests.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "B5BB6B4A0F890FBA00444FBF"
-               BuildableName = "wesnothd"
-               BlueprintName = "wesnothd"
-               ReferencedContainer = "container:Wesnoth.xcodeproj">
+               BlueprintIdentifier = "B597C4970FACD3CD00CE81F5"
+               BuildableName = "unit_tests"
+               BlueprintName = "unit_tests"
+               ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,10 +32,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "B5BB6B4A0F890FBA00444FBF"
-            BuildableName = "wesnothd"
-            BlueprintName = "wesnothd"
-            ReferencedContainer = "container:Wesnoth.xcodeproj">
+            BlueprintIdentifier = "B597C4970FACD3CD00CE81F5"
+            BuildableName = "unit_tests"
+            BlueprintName = "unit_tests"
+            ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -46,21 +46,39 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
-      useCustomWorkingDirectory = "NO"
+      useCustomWorkingDirectory = "YES"
+      customWorkingDirectory = "$BUILT_PRODUCTS_DIR/Wesnoth.app/Contents/Resources"
       ignoresPersistentStateOnLaunch = "NO"
-      debugDocumentVersioning = "YES"
+      debugDocumentVersioning = "NO"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "B5BB6B4A0F890FBA00444FBF"
-            BuildableName = "wesnothd"
-            BlueprintName = "wesnothd"
-            ReferencedContainer = "container:Wesnoth.xcodeproj">
+            BlueprintIdentifier = "B597C4970FACD3CD00CE81F5"
+            BuildableName = "unit_tests"
+            BlueprintName = "unit_tests"
+            ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "DYLD_FALLBACK_FRAMEWORK_PATH"
+            value = "../../../TestFrameworks:../Frameworks"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "DYLD_FALLBACK_LIBRARY_PATH"
+            value = "../../../TestFrameworks:../Frameworks"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "DYLD_IMAGE_SUFFIX"
+            value = "-mt"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -74,10 +92,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "B5BB6B4A0F890FBA00444FBF"
-            BuildableName = "wesnothd"
-            BlueprintName = "wesnothd"
-            ReferencedContainer = "container:Wesnoth.xcodeproj">
+            BlueprintIdentifier = "B597C4970FACD3CD00CE81F5"
+            BuildableName = "unit_tests"
+            BlueprintName = "unit_tests"
+            ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
