--- a/projectfiles/Xcode/The Battle for Wesnoth.xcodeproj/xcshareddata/xcschemes/wesnothd.xcscheme
+++ b/projectfiles/Xcode/The Battle for Wesnoth.xcodeproj/xcshareddata/xcschemes/wesnothd.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "9107AE131DB32862001927B0"
-               BuildableName = "liblua.a"
-               BlueprintName = "liblua"
-               ReferencedContainer = "container:Wesnoth.xcodeproj">
+               BlueprintIdentifier = "B5BB6B4A0F890FBA00444FBF"
+               BuildableName = "wesnothd"
+               BlueprintName = "wesnothd"
+               ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -29,6 +29,15 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "B5BB6B4A0F890FBA00444FBF"
+            BuildableName = "wesnothd"
+            BlueprintName = "wesnothd"
+            ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -42,15 +51,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "9107AE131DB32862001927B0"
-            BuildableName = "liblua.a"
-            BlueprintName = "liblua"
-            ReferencedContainer = "container:Wesnoth.xcodeproj">
+            BlueprintIdentifier = "B5BB6B4A0F890FBA00444FBF"
+            BuildableName = "wesnothd"
+            BlueprintName = "wesnothd"
+            ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -60,15 +70,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "9107AE131DB32862001927B0"
-            BuildableName = "liblua.a"
-            BlueprintName = "liblua"
-            ReferencedContainer = "container:Wesnoth.xcodeproj">
+            BlueprintIdentifier = "B5BB6B4A0F890FBA00444FBF"
+            BuildableName = "wesnothd"
+            BlueprintName = "wesnothd"
+            ReferencedContainer = "container:The Battle for Wesnoth.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
