Include missing files inside Xcode project

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ projectfiles/Xcode/**/*.mode1v3
 projectfiles/Xcode/**/*.pbxuser
 projectfiles/Xcode/**/xcuserdata
 projectfiles/Xcode/**/*.xcworkspace
+!projectfiles/Xcode/**/project.pbxproj
 
 # CodeBlocks
 projectfiles/**/.clang
