--- a/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg
@@ -18,15 +18,15 @@
         [part]
             music=elvish-theme.ogg
             # po: If the target language has a specialized term for a fortified town, like Latin "oppidum", use it for Parthyn.
-            story= _ "Malin Keshar was born ten years after the death of Haldric IV. He grew up in the northern border town of Parthyn, the second child and eldest son of the baron of the city. Every summer, by the time the mountainous paths and high passes shed their wintry gowns of snow, orcs descended from their northern hills to ravage the settlements at the frontier. Every year, Malin’s father led the townsfolk to repel the raids and force the orcs to retreat back to the north."
+            story= _ "Malin Keshar was born ten years after the death of Haldric IV. He grew up in the northern border town of Parthyn, the second child and eldest son of the city’s baron. Every summer, by the time the mountainous paths and high passes shed their wintry gowns of snow, orcs descended from the northern hills to ravage the settlements at the frontier. Every year, Malin’s father led the townsfolk to repel the raids and force the orcs to retreat back to the north."
             {STORYTXT_BACKGROUND_BIGMAP_DID}
         [/part]
         [part]
-            story= _ "When Malin was 10, a mage who passed through the town sensed strong magical abilities in the boy. His parents, seeing a chance for him to escape the constant battle with the orcs, arranged for him to be sent to the mages at the Isle of Alduin. He studied there for eight years, learning all manner of magic, from basic control over the elements, to the mystic arts and scrying, to alchemy and simple medicine."
+            story= _ "When Malin was ten, a mage who passed through the town sensed strong magical abilities in the boy. His parents, seeing a chance for him to escape the constant battle with the orcs, arranged for him to be sent to the mages at the Isle of Alduin. He studied there for eight years, learning all manner of magic from basic control over the elements, to the mystic arts and scrying, to alchemy and simple medicine."
             {STORYTXT_BACKGROUND_BIGMAP_DID}
         [/part]
         [part]
-            story= _ "Malin quickly found that he had considerable talent, especially for arcane sorcery and manipulating the essence of life. In time, however, he grew bored of his studies and began to research magics that were far beyond the teachings of his masters. Despite Malin’s substantial skill, his lack of experience led to a series of failed experiments, one of which took the life of a fellow student. For his transgressions, he was expelled."
+            story= _ "Although his life on Alduin was luxurious and peaceful, Malin found the teachings of the scholarly mages to be too philosophical for his tastes. His thoughts turned back to Parthyn, where brute force, not theoretical reasoning, was necessary to drive off the orcs. In time, Malin began to research new magics on his own, but his lack of experience led to a series of failed experiments, one of which took the life of a fellow student. For his transgressions, he was expelled."
             {STORYTXT_BACKGROUND_BIGMAP_DID}
         [/part]
         [part]
@@ -38,15 +38,15 @@
             {STORYTXT_BACKGROUND_BIGMAP_DID}
         [/part]
         [part]
-            story= _ "The silence was broken by the irregular shuffle of a man emerging from the trees. He stood before them, a hunched figure with a rasping voice reminiscent of crackling bones. <i>“I am Darken Volk. While I know you do not love my kind, I think it is vital that we put aside our differences for the moment. The orc menace grows in the north, and they will soon return in even greater force. You cannot hope to defend against them without my help.”</i>"
+            story= _ "The silence was broken by the irregular shuffle of a man emerging from the trees. He stood before them, a hunched figure with a rasping voice reminiscent of crackling bones. <i>“I am Darken Volk. While I know you do not love my kind, I think it is vital that we put aside our differences for the moment. The orc menace grows in the north and they will soon return in even greater force. You cannot hope to defend against them without my help.”</i>"
             {STORYTXT_BACKGROUND_BIGMAP_DID}
         [/part]
         [part]
-            story= _ "Drogan, the captain of the guard, replied, <i>“You surely know that the penalty for necromancy is death. As we do not currently possess the means to fight you, and seeing that you have saved our village, we will allow you to rest in our village for a few days. Upon your departure, however, you are banished from Parthyn. Should you return, we will attack you on sight.”</i>"
+            story= _ "Drogan, the captain of the guard, replied, <i>“Nay, you surely know that the penalty for necromancy is death. However, seeing that you have saved our village, we will allow you to rest here for a few days. Upon your departure, however, you are banished from Parthyn. Should you return, we will attack you on sight.”</i>"
             {STORYTXT_BACKGROUND_BIGMAP_DID}
         [/part]
         [part]
-            story= _ "Malin, troubled by his father’s death and the strength of the orcish assault, argued to no avail that Darken Volk be allowed to stay. After a couple days, the necromancer left Parthyn without incident. A week passed..."
+            story= _ "Malin, troubled by his father’s death and the strength of the orcish assault, argued to no avail that Darken Volk be allowed to stay. After a couple days, the necromancer left Parthyn without incident."
             {STORYTXT_BACKGROUND_BIGMAP_DID}
         [/part]
     [/story]
@@ -113,7 +113,7 @@
         type=Sergeant
         id=Drogan
         name= _ "Drogan"
-		experience=17
+        experience=17
         profile=portraits/drogan.png
         canrecruit=yes
         unrenamable=yes
@@ -199,7 +199,7 @@
 
         [message]
             speaker=Dela Keshar
-            message= _ "Was it really a good idea to send out a raiding party so soon after the orcs just attacked us? Even father is no longer here anymore..."
+            message= _ "Was it really a good idea to send out a raiding party so soon after the orcs just attacked us? Even father is no longer here..."
         [/message]
 
         [message]
@@ -234,7 +234,7 @@
 
         [message]
             speaker=Drogan
-            message= _ "Quiet, you. Malin, you must hold the river fort, or they shall surely overrun the town. If you can defend for two days, the raiding party should return by then, and we will be able to fight the orcs off. For now, I will bring what soldiers remain to your aid."
+            message= _ "Quiet, you. Malin, you must hold the river fort, or they shall surely overrun the town. If you can defend for two days, the raiding party should return by then and we will be able to fight the orcs off. For now, I will bring what soldiers remain to your aid."
         [/message]
     [/event]
 
@@ -254,7 +254,8 @@
         [message]
             speaker=Malin Keshar
             # wmllint: local spelling stewpots
-            message= _ "No, Drogan. I raised this corpse with the skills Darken Volk taught to me before he left. While I have no love for it, without the help of the dead, we consign ourselves and our families to orcish stewpots!"
+            # po: stewpots means a big pot that orcs cook things in, like humans in this case
+            message= _ "No, Drogan. I raised this corpse with the skills Darken Volk taught me before he left. While I have no love for it, without the help of the dead, we consign ourselves and our families to orcish stewpots!"
         [/message]
 
         [message]
@@ -345,6 +346,7 @@
             result=defeat
         [/endlevel]
     [/event]
+
     [event]
         name=die
         [filter]
@@ -384,7 +386,7 @@
 
         [message]
             speaker=Soldier
-            message= _ "We’ve returned from ransacking the orcish camps, Drogan. It seems like we are just in time!"
+            message= _ "We’ve returned from ransacking the orcish camps, Drogan. It seems like we’re just in time!"
         [/message]
         [message]
             speaker=Kreg'a'shar Trr
@@ -435,7 +437,7 @@
             [then]
                 [message]
                     speaker=Drogan
-                    message= _ "By all rights, I should have you executed on the spot, Malin. I cannot believe you let that necromancer corrupt you. I suppose part of this is my fault since I was the one who allowed him into Parthyn; nevertheless	... Since I showed him mercy, I will show the same to you. You are hereby banished from Parthyn."
+                    message= _ "By all rights, I should have you executed on the spot, Malin. I cannot believe you let that necromancer corrupt you. I suppose part of this is my fault since I was the one who allowed him into Parthyn; nevertheless... Since I showed him mercy, I will show the same to you. You are hereby banished from Parthyn."
                 [/message]
 
                 [message]
@@ -486,7 +488,7 @@
             [else]
                 [message]
                     speaker=Drogan
-                    message= _ "That was bravely done, lad, holding the orcs off by yourself. The mages taught you well. But I fear the raiding party brings grave news from the north. More warlords have begun to mass armies in their hill forts, no more than a few days north of the Great River. I do not know if we possess the strength to fight them off."
+                    message= _ "That was bravely done, lad, holding the orcs off by yourself. The mages taught you well. But I fear the raiding party brings grave news from the north. More warlords have begun to mass armies in the hills, no more than a few days north of the Great River. I do not know if we possess the strength to fight them off."
                 [/message]
 
                 [message]
@@ -539,16 +541,16 @@
                     message= _ "I hope that you will stay with us, Malin. Be reasonable."
                 [/message]
 
-				[message]
+                [message]
                     speaker=Malin Keshar
                     message= _ "Be reasonable? I am the only one who sees reason here. If no one will help me, I will go by myself."
                 [/message]
-				
-				[message]
+
+                [message]
                     speaker=Dela Keshar
                     message= _ "Malin, seeking out the help of a necromancer is just... just foolhardy! We need you here to help protect the town!"
                 [/message]
-				
+
                 [message]
                     speaker=Malin Keshar
                     message= _ "You will eventually see that I am right, Dela. I am resolved."
