DiD: added lua for faster cutscene skipping

--- a/data/campaigns/Descent_Into_Darkness/_main.cfg
+++ b/data/campaigns/Descent_Into_Darkness/_main.cfg
@@ -66,7 +66,11 @@
 [binary_path]
     path=data/campaigns/Descent_Into_Darkness
 [/binary_path]
-
+[lua]
+    code = <<
+        wesnoth.dofile('campaigns/Descent_Into_Darkness/lua/' .. 'skip_animations.lua')
+    >>
+[/lua]
 {campaigns/Descent_Into_Darkness/utils}
 {campaigns/Descent_Into_Darkness/scenarios}
 
