DiD S3: modified dialogue

--- a/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg
@@ -21,7 +21,7 @@
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
         [part]
-            story=_ "The colored patchwork of fall eventually fades to ashen winter. As the first flakes of snowfall drift over the barren lands, the nights grow longer as the sun disappears behind a seemingly perpetual mist of pallid clouds. Hounded by the elements, the two necromancers retreat into the hills to seek shelter. By a stroke of good fortune, they stumble across a mostly abandoned cave just as the winter sets in."
+            story=_ "The colored patchwork of fall eventually fades wintry snowfall drifting over barren lands. The nights grow longer as the sun disappears behind a seemingly perpetual mist of pallid clouds. Hounded by the elements, the two necromancers retreat into the hills to seek shelter. By a stroke of good fortune, they stumble across a mostly abandoned cave just as the winter sets in."
             {STORYTXT_BACKGROUND travel.jpg}
         [/part]
     [/story]
@@ -213,7 +213,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "I sense many lifeforms in this cavern, but none are very powerful. Most likely they are merely... nothing more than beasts. Still, we may be able to use them to continue your training."
+            message= _ "I sense many lifeforms in this cavern, but none are very powerful. Most likely they are merely nothing more than... beasts. Still, we may be able to use them to continue your training."
         [/message]
 
         [message]
@@ -933,7 +933,7 @@
 
         [message]
             speaker=Darken Volk
-            message= _ "No mishaps this time, but you will need to... practice more."
+            message= _ "No mishaps this time, but you will need to practice more."
         [/message]
 
         {CLEAR_VARIABLE loc1}
